--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
          <main>
 
-             <h1>Click the Button for a Surprise GIF!</h1>
+             <h1>Click the Button for a Surprise!</h1>
 
               <button class="animated-btn" id="toggleButton" onclick="toggleSurprise()">Click Me!</button>
 
@@ -126,7 +126,6 @@
                          Loading…
                      </iframe>
      
-         <input type="submit" value="Submit"><br>
      </form>
 
      <footer>
