--- a/index.html
+++ b/index.html
@@ -133,5 +133,12 @@
                          </div>
                      </section>
                                       <script src="script.js"></script>
+                                      <footer>
+                                          <div class="container">
+                                              <p>My LinedIn</p><br>
+                                              <p><a href="www.linkedin.com/in/daniella-hibbert-94a5a12b9
 
+" target="_blank">LinkedIn</a></p>
+                                          </div>
+                                      </footer>
  </html>
