--- a/index.html
+++ b/index.html
@@ -44,19 +44,27 @@
              <section id="about">
                  <div class="container">
                      <h2>About Me</h2>
-                     <p>Hello! My name is Daniella Allana Hibbert, and I am a dedicated sophomore majoring in Computer Science.<br> From an early age, I discovered my passion for coding, and it has only grown stronger as I continue my studies.<br> I find immense joy in solving problems and creating innovative solutions <br>through code.<br></br>
 
-                     In the future, I aspire to become a software developer, where I can fully apply and expand my<br>coding skills. My journey in the tech world has been enriched by my experiences with notable organizations, including:<br></br>
-
-                     <p><strong>
+                 <p> Hi, I'm Daniella Allana Hibbert! I am currently a sophomore majoring in Computer Science, <br>
+                  with a passion for coding that began early and has only grown stronger as I progress in my studies.<br>
+                  
+                  I love turning ideas into reality through technology, solving complex problems, <br>
+                  and pushing the boundaries of what software can achieve. <br>
+                  This website is just one of the many projects I've coded to showcase my skills and creativity.<br>
+                  Over the years, I've had the privilege of working on various projects that showcase my <br>
+                  coding abilities and problem-solving skills. <br>
+                  From building websites to crafting innovative applications, I aim to create solutions that are not only functional but impactful.<br>
+                  
+                  In addition to my academic journey, I have worked with several organizations that have further fueled my passion for tech. <br>
+                     <<strong>
                          Girls Who Code:
                      </strong>
                          Contributing to empowering women in technology and learning collaborative coding practices.<br></br>
                      </p>
                       <p>
-
-
-                     <strong>Propel Learn:</strong> An Apple-funded initiative where I honed my skills in various coding languages, including Swift and Python.<br></br>
+                     <strong>
+                      Propel Learn:
+                     </strong> An Apple-funded initiative where I honed my skills in various coding languages, including Swift and Python.<br>
                            </p>
                      <img src="your_profile_picture.jpg" alt="Your Profile Picture" width="500" height="400">
                  </div>
