--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                   
                                    <div class="project">  
                                         <h3>Project 1: Survey/Registration form</h3>
-                                        <p> This project features a coded survey form designed for users to submit their responses regarding various elements. . </p>
+                                        <p> This front-end registration form allows users to sign up by entering essential details such as their name, email address, and password. It can be adapted for various purposes, whether you're gathering user information for newsletters, account creation, or event sign-ups. The form is designed to be simple, user-friendly, and responsive for a seamless experience across devices. </p>
                                         <a href="formsvideo.mp4">View Project</a>
                                     </div><br>
 
@@ -99,7 +99,9 @@
 
                                       <div class="project">
                                           <h3>Project 2: Element Quiz app</h3>
-                                          <p>This project showcases a coded element quiz app in which various types of elements from the periodic table are displayed</p>
+                                          <p>This project showcases a coded quiz application that displays various elements from the periodic table. Users are prompted with questions about different types of elements, testing their knowledge of chemical properties, symbols, atomic numbers, and other periodic table facts. The app provides an interactive and educational experience, helping users to reinforce their understanding of chemistry.
+
+</p>
                                           <a href="animation1.mp4">View Project</a>
                                       </div>
 
