--- a/index.html
+++ b/index.html
@@ -146,9 +146,7 @@
                                       <footer>
                                           <div class="container">
                                               <p>My LinedIn</p><br>
-                                              <p><a href="www.linkedin.com/in/daniella-hibbert-94a5a12b9
-
-" target="_blank">LinkedIn</a></p>
+                                              <p><a href="www.linkedin.com/in/daniella-hibbert-94a5a12b9" target="_blank">LinkedIn</a></p>
                                           </div>
                                       </footer>
  </html>
