--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
                                       <script src="script.js"></script>
                                       <footer>
                                           <div class="container">
-                                              <p>My LinedIn</p><br>
-                                              <p><a href="www.linkedin.com/in/daniella-hibbert-94a5a12b9" target="_blank">LinkedIn</a></p>
+                                              <p> @ Programmed and styled by Daniella Hibbert</p><br>
                                           </div>
                                       </footer>
  </html>
