--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                                   
                                    <div class="project">  
                                         <h3>Project 1: Survey/Registration form</h3>
-                                        <p> This front-end registration form allows users to sign up by entering essential details such as their name, email address, and password. It can be adapted for various purposes, whether you're gathering user information for newsletters, account creation, or event sign-ups. The form is designed to be simple, user-friendly, and responsive for a seamless experience across devices. </p>
+                                        <p> This front-end registration form allows users to sign up by entering essential details such as their name, email address, and password. It can be adapted for various purposes, whether you're gathering user information for newsletters, account creation, or event sign-ups. The form is designed to be simple, user-friendly, and responsive for a seamless experience across devices. </p> <p><strong>Languages Used:</strong></p>
+                                    <br></br> <p><em>HTML, CSS, Javascript</em></p>
                                         <a href="formsvideo.mp4">View Project</a>
                                     </div><br>
 
@@ -145,7 +146,7 @@
                                       <script src="script.js"></script>
                                       <footer>
                                           <div class="container">
-                                              <p> @ Programmed and styled by Daniella Hibbert</p><br>
+                                              <p>Programmed and styled by Daniella Hibbert</p><br>
                                           </div>
                                       </footer>
  </html>
