--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                   
                                    <div class="project">  
                                         <h3>Project 1: Survey/Registration form</h3>
-                                        <p> This front-end registration form allows users to sign up by entering essential details such as their name, email address, and password. It can be adapted for various purposes, whether you're gathering user information for newsletters, account creation, or event sign-ups. The form is designed to be simple, user-friendly, and responsive for a seamless experience across devices. </p> <p><strong>Languages Used:</strong></p>
+                                        <p> This front-end registration form allows users to sign up by entering essential details such as their name, email address, and password. It can be adapted for various purposes, whether you're gathering user information for newsletters, account creation, or event sign-ups. The form is designed to be simple, user-friendly, and responsive for a seamless experience across devices. <br></br</p> <p><strong>Languages Used:</strong></p>
                                     <br></br> <p><em>HTML, CSS, Javascript</em></p>
                                         <a href="formsvideo.mp4">View Project</a>
                                     </div><br>
@@ -101,7 +101,8 @@
                                       <div class="project">
                                           <h3>Project 2: Element Quiz app</h3>
                                           <p>This project showcases a coded quiz application that displays various elements from the periodic table. Users are prompted with questions about different types of elements, testing their knowledge of chemical properties, symbols, atomic numbers, and other periodic table facts. The app provides an interactive and educational experience, helping users to reinforce their understanding of chemistry.
-
+ <br></br</p> <p><strong>Languages Used:</strong></p>
+                                    <br></br> <p><em>Swift</em></p>
 </p>
                                           <a href="animation1.mp4">View Project</a>
                                       </div>
@@ -114,6 +115,8 @@
                                       <div class="project">
                                           <h3>Project #3: Rock, Paper, Scissor app</h3>
                                           <p>This project showcases a coded rock, paper, scissor game is generated and displayed.</p>
+                                       <br></br</p> <p><strong>Languages Used:</strong></p>
+                                    <br></br> <p><em>Swift</em></p>
                                           <a href="animation2.mp4">View Project</a>
                                       </div>
 
