--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                       </video>
                                       <div class="project">
                                           <h3>Project #3: Rock, Paper, Scissor app</h3>
-                                          <p>This project showcases a coded rock, paper, scissor game is generated and displayed.</p>
+                                          <p>A simple game that lets users play against a computer with randomized choices and results.</p>
                                        <br></br</p> <p><strong>Languages Used:</strong></p>
                                     <br></br> <p><em>Swift</em></p>
                                           <a href="animation2.mp4">View Project</a>
